[package]
name = "myust"
version = "1.0.4"
edition = "2021"
authors = ["wildanrfq <wildanrfqi@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/myust"
repository = "https://github.com/danrfq/myust"
description = "A rich and hybrid mystb.in API wrapper for Rust 🦀"

[dependencies]
async-trait = "0.1"
humantime = "2.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.27", features = ["macros"] }

[features]
sync = ["reqwest/blocking"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]